# c-plugins

./: .gitignore  .travis.yml  Makefile.am  README.md  Rules_noxml-po.mak  build.sh  configure.ac  updateallpo.sh
.github/workflows/: cplugins.yml
AirPlayer/po/: AirPlayer.pot  Makefile.am
AirPlayer/src/: AirTunes.py  Makefile.am  __init__.py  appletv.py  httputil.py  libairtunes.so.0  plugin.py  protocol_handler.py  proxy  rtsp.py  websocket.py
AirPlayer/src/1024x576/: Makefile.am  skin.py
AirPlayer/src/1280x720/: Makefile.am  skin.py
AirPlayer/src/1920x1080/: Makefile.am  skin.py
AirPlayer/src/720x576/: Makefile.am  skin.py
AirPlayer/src/lib/: Makefile.am
AirPlayer/src/lib/biplist/: Makefile.am  __init__.py
AirPlayer/src/mediabackends/: AirPlayMoviePlayer.py  AirPlayMusicPlayer.py  AirPlayPicturePlayer.py  BaseMediaBackend.py  E2MediaBackend.py  Makefile.am  helper.py
AirPlayer/src/zeroconf/: Makefile.am  zeroconf.c
CI/: build.sh
MisPlsLcnScan/po/: MisPlsLcnScan.pot  en.po  ru.po
MisPlsLcnScan/src/: Makefile.am  MisPlsLcnScan.py  MisPlsLcnScanSkin.py  __init__.py  plugin.py  providers.py
TerrestrialScan/po/: TerrestrialScan.pot  ar.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  en.po  es.po  et.po  fa.po  fi.po  fr.po  fy.po  gl.po  he.po  hr.po  hu.po  is.po  it.po  lt.po  lv.po  nb.po  nl.po  no.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sk.po  sl.po  sr.po  sv.po  th.po  tr.po  uk.po
TerrestrialScan/src/: MakeBouquet.py  Makefile.am  TerrestrialScan.py  TerrestrialScanSkin.py  __init__.py  plugin.py
moviecut/po/: MovieCut.pot
moviecut/src/: __init__.py  plugin.py
networkbrowser/po/: NetworkBrowser.pot
networkbrowser/src/: AutoMount.py  MountEdit.py  MountManager.py  MountView.py  NetworkBrowser.py  UserDialog.py  UserManager.py  __init__.py  ipscan.py  plugin.py
networkbrowserpli/po/: NetworkBrowser.pot
networkbrowserpli/src/: AutoMount.py  MountEdit.py  MountManager.py  MountView.py  NetworkBrowser.py  UserDialog.py  UserManager.py  __init__.py  plugin.py
permanenttimeshift/po/: PermanentTimeshift.pot
permanenttimeshift/src/: plugin.py
vps/po/: de.po  it.po  vps.pot
vps/src/: Modifications.py  Vps.py  VpsWebScreens.py  Vps_check.py  Vps_setup.py  __init__.py  plugin.py
vps/src/WebComponents/Sources/: Vps.py
